# SQL-Reasoning-LLM

./: .gitignore  README.md  main.py  pyproject.toml
models/qwen-0.5b-cpt-lora/: adapter_config.json  tokenizer_config.json
models/qwen-0.5b-reasoning-final/: README.md  adapter_config.json  tokenizer_config.json
models/qwen-0.5b-sft-lora/: adapter_config.json
outputs/cpt_checkpoints/: README.md
outputs/cpt_checkpoints/checkpoint-500/: tokenizer_config.json  trainer_state.json
outputs/grpo_checkpoints/: README.md
outputs/grpo_checkpoints/checkpoint-300/: rng_state.pth  trainer_state.json
outputs/sft_checkpoints/: README.md
outputs/sft_checkpoints/checkpoint-500/: README.md  trainer_state.json
src/data_prep/: format_cpt_data.py  format_sft_data.py
src/evaluation/: agent.py  api.py  inference.py  merge.py
src/training/: cpt_trainer.py  grpo_trainer.py  model_loader.py  sft_trainer.py
