[project]
name = "sql-reasoning-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "sqlglot>=29.0.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "trl>=0.24.0",
    "unsloth>=2026.3.4",
    "wandb>=0.25.1",
]
